# linuxgittest

./: CMakeLists.txt  CMakeLists.txt.cope  CMakeLists.txt.libcompile  file2.txt  file4.txt
inc/: myadd1.h  myadd2.h  myadd3.h
src/: libtest_main.cpp
src1/: myadd1.cpp  myadd2.cpp  myadd3.cpp
